force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Icon_Class__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Icon_Class__c</fullName>
    <description>This field is optional. The admin manually populates this field. It controls the icon that displays beside the name of a route on the secondary navigation menu. It is not used for tertiary routes.</description>
    <inlineHelpText>This defines the Icon that will display with each route.</inlineHelpText>
    <label>Icon Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>