force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--DEPRECATED--

            Moved to Route_Group__c.Is_Hidden__c.</description>
    <label>-D Is Hidden</label>
    <type>Checkbox</type>
</CustomField>