force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Order__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Order__c</fullName>
    <description>--DEPRECATED--

            Moved to Route_Group__c.Order__c.</description>
    <label>-D Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>