force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Parent_App__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_App__c</fullName>
    <description>--DEPRECATED--

            Moved to Route_Group__c.Parent_Route__c.</description>
    <label>-D Parent App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>