force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Taxonomy_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Taxonomy_Id__c</fullName>
    <description>The system automatically populates this required string field with an identifier for the part of the nCino product taxonomy a route belongs to. By default, the value for a route and its clones is the standard app name of the route.</description>
    <externalId>true</externalId>
    <label>Taxonomy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>