force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Topbar__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Topbar__c</fullName>
    <description>This field is manually populated. It is optional. This field is used to determine which topbar to use for a given route.</description>
    <inlineHelpText>The page include for the top bar region of the base UI template.</inlineHelpText>
    <label>Topbar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>