force-app/main/default/objects/nFORCE__Route__c/fields/nPortal__Portal_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Portal_Header_Text__c</fullName>
    <description>A special header field which differs from the internal representation of the Route for use in Customer Portal when displaying a Route to external users.</description>
    <inlineHelpText>This value is displayed in Customer Portal for Routes which are used for dynamic UI generation, such as a page on an Online Application, and varies from header text which might appear internally.</inlineHelpText>
    <label>Portal Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>