force-app/main/default/objects/nFORCE__Route__c/fields/nPortal__Search_Object_Filter__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Search_Object_Filter__c</fullName>
    <description>Manually populate this field with a Where clause to filter inappropriate search results.</description>
    <inlineHelpText>Enter an optional Where clause to filter the results of the search on this sObject. An example on the Account object would be &quot;Type != &apos;Individual&apos;&quot;.</inlineHelpText>
    <label>OA Search Object Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>