force-app/main/default/objects/nFORCE__Route__c/fields/nPortal__Search_Results_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Search_Results_Fieldset__c</fullName>
    <description>Enter the name of the field set that controls the type of information displayed for each search results. There are two packaged field sets, both on the Account object, for this purpose. These field sets populate on the Business Search route by default.</description>
    <inlineHelpText>Field set that controls the information displayed in search results.</inlineHelpText>
    <label>OA Search Results Fieldset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>