force-app/main/default/objects/nFORCE__Route__c/fields/nPortal__Search_Select_Active_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Search_Select_Active_Text__c</fullName>
    <description>This field determines the text that displays on the button the user clicks if they want to continue their application with the business that has populated in the search results. This button is only visible if the user has already selected the business but clicks away to view different results or add a different business, then cancels that action.</description>
    <label>OA Search Select Active Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>