force-app/main/default/objects/nFORCE__Route__c/fields/nPortal__Search_Select_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Search_Select_Text__c</fullName>
    <description>This field determines the text that displays on the button the user clicks to indicate that they want to apply with a business that has populated in the search results.</description>
    <label>OA Search Select Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>